--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ouvidoria</title>
+    <title>Ouvidoria Hemoam</title>
+    <link rel="shortcut icon" href="Imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+
 </head>
 <body>
     <main>
@@ -13,11 +15,42 @@
             <p>Ouvidoria    Hemoam</p>
         </header>
         <section class="links">
-            <a href="" class="container">
+
+            <a href="https://falabr.cgu.gov.br/web/home?modoOuvidoria=1" target="_blank" class="container">
                 <span class="image">
                     <img src="Imagens/falabr-logo-azul.png" alt="">
                 </span>
-                <span class="nome">fala.br</span>
+                <span class="nome">Fala.Br</span>
+
+            </a>
+            <a href="http://ouvprod01.saude.gov.br/ouvidor/CadastroDemandaPortal.do
+            " target="_blank" class="container">
+                <span class="image">
+                    <img src="Imagens/ouvidor sus - logo.png" alt="">
+                </span>
+                <span class="nome">Ouvidor Sus</span>
+
+            </a>
+            <a href="https://acessoainformacao.am.gov.br/cadastro/" target="_blank" class="container">
+                <span class="image">
+                    <img src="Imagens/e-SIC.png" alt="">
+                </span>
+                <span class="nome">E-Sic</span>
+
+            </a>
+            <a href="https://www.hemoam.am.gov.br/?secao=ouvidoria#anc_t
+            " target="_blank" class="container">
+                <span class="image">
+                    <img src="Imagens/hemoam logo.jpg" alt="">
+                </span>
+                <span class="nome">Site do Hemoam</span>
+
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=559236550168" target="_blank" class="container">
+                <span class="image">
+                    <img src="Imagens/whatsapp-logo-1.png" alt="">
+                </span>
+                <span class="nome">WhatsApp</span>
 
             </a>
             
